--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -359,7 +359,7 @@
                 <div class="logo-icon">
                     <!-- Removed WhatsApp icon -->
                 </div>
-                <div class="logo-text"><img id="theme-logo" src="/logo.svg" alt="Novi Logo" style="height:56px;vertical-align:middle;"></div>
+                <div class="logo-text"><img id="theme-logo" src="/logo-animated.svg" alt="Novi Logo" style="height:56px;vertical-align:middle;"></div>
             </div>
             <nav class="nav">
                 <a href="/" class="nav-link">Home</a>
@@ -425,7 +425,7 @@
         function updateLogo(theme) {
             const logo = document.getElementById('theme-logo');
             if (logo) {
-                logo.src = theme === 'dark' ? '/logo-dark.svg' : '/logo.svg';
+                logo.src = theme === 'dark' ? '/logo-animated-dark.svg' : '/logo-animated.svg';
             }
         }
     </script>
